src/css/main.scss
/////////////////////
// BACKGROUND BLUR //
/////////////////////
html {
  min-height: 100%;
  min-width: 100%;
  font-family: 'Metamorphous', cursive;
  background: url(img/bg.png) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
body {
  height: 100%;
  width: 100%;
  background-color: rgba(0,0,0,0.5)
}
/////////////////////
// GENERAL STYLING //
/////////////////////

#main-header{
  text-align: center;
  padding-top: 5rem;
  h1 {
    font-size: 4rem;
    padding-bottom: 0;
    margin: 0;
    text-shadow: 2px 2px 4px #ff0000;
    color: #fff;
  }
}

form {
  text-align: center;
  color: #fff;
  font-size: 1.7rem;
  label {
    display: block;
    margin: 30px 0;
  }
  input {
    width: 50%;
    height: 4rem;
    background-color: rgba(255,255,255,0.9);
    color: rgba(0,0,0,0.4);
    border: 0;
    border-radius: 5px;
  }
  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color: rgba(0,0,0,0.4);
    text-align: center;
  }
  ::-moz-placeholder { /* Firefox 19+ */
    color: rgba(0,0,0,0.4);
    text-align: center;
  }
  #submit-btn-box {
    padding: 60px 0;
  }
}

//////////////////////////
// FADE IN ON PAGE LOAD //
//////////////////////////

@keyframes fadeIn {
  from { opacity:0; }
  to { opacity:1; }
}

.fade-in {
  opacity:0;
  -webkit-animation:fadeIn ease-in 1;
  -moz-animation:fadeIn ease-in 1;
  animation:fadeIn ease-in 1;
  -webkit-animation-fill-mode:forwards;
  -moz-animation-fill-mode:forwards;
  animation-fill-mode:forwards;
  -webkit-animation-duration:1.5s;
  -moz-animation-duration:1.5s;
  animation-duration:1.5s;
}

//////////////////////
// CUSTOM DROPDOWNS //
//////////////////////

.custom-dropdown {
  position: relative;
  display: inline-block;
  vertical-align: middle;
}

.custom-dropdown select {
  background-color: rgba(255,255,255,0.9);
  color: rgba(0,0,0,0.4);
  font-size: inherit;
  padding: .5em;
  padding-right: 2.5em;
  border: 0;
  margin: 0;
  border-radius: 3px;
  text-indent: 0.01px;
  text-overflow: '';
  appearance: button; /* hide default arrow in chrome OSX */
}

.custom-dropdown::before,
.custom-dropdown::after {
  content: "";
  position: absolute;
  pointer-events: none;
}

.custom-dropdown::after { /*  Custom dropdown arrow */
  content: "\25BC";
  height: 1em;
  font-size: .625em;
  line-height: 1;
  right: 1.2em;
  top: 50%;
  margin-top: -.5em;
}

.custom-dropdown::before { /*  Custom dropdown arrow cover */
  width: 2em;
  right: 0;
  top: 0;
  bottom: 0;
  border-radius: 0 3px 3px 0;
}

.custom-dropdown select[disabled] {
  color: rgba(0,0,0,.3);
}

.custom-dropdown select[disabled]::after {
  color: rgba(0,0,0,.1);
}

.custom-dropdown::before {
  background-color: rgba(0,0,0,.15);
}

.custom-dropdown::after {
  color: rgba(0,0,0,.4);
}

/////////////////////////
// FANCY SUBMIT BUTTON //
/////////////////////////

$color-grey: #666;
$color-black: #000;
$stripe-height: 7px;
$btn-color: $color-grey;
$btn-background: rgba(255,255,255,0.9);
$btn-color-hover: #fff;
$btn-background-hover: $color-grey;
$border-color: $color-grey;
$border-color-hover: $color-black;

@mixin reset-button {
  overflow : visible;
  margin : 0;
  padding : 0;
  border : 0;
  background : transparent;
  font : inherit;
  line-height : normal;
  cursor : pointer;
  -moz-user-select : text;
  &::-moz-focus-inner {
    padding : 0;
    border : 0;
  }
}

@keyframes stripe-slide {
  0% { background-position: 0% 0; }
  100% { background-position: 100% 0; }
}
.btn {
  @include reset-button;
  display: block;
  margin: 0 auto;
  text-decoration: none;
  text-transform: uppercase;
  padding: 16px 36px 22px;
  background-color: $btn-background;
  color: $btn-color;
  border: 2px solid $border-color;
  border-radius: 6px;
  margin-bottom: 16px;
  transition: all .5s ease;

  &--stripe {
    overflow: hidden;
    position: relative;

    &:after {
      content: '';
      display: block;
      height: $stripe-height;
      width: 100%;
      background-image: repeating-linear-gradient(
        45deg,
        $border-color,
        $border-color 1px,
        transparent 2px,
        transparent 5px
      );
      -webkit-backface-visibility: hidden;
      backface-visibility: hidden;
      border-top: 1px solid $border-color;
      position: absolute;
      left: 0;
      bottom: 0;
      background-size: $stripe-height $stripe-height;
    }

    &:hover {
      background-color: $btn-background-hover;
      color: $btn-color-hover;
      border-color: $border-color-hover;

      &:after {
        background-image: repeating-linear-gradient(
          45deg,
          $btn-color-hover,
          $btn-color-hover 1px,
          transparent 2px,
          transparent 5px
        );
        border-top: 1px solid $border-color-hover;
        animation: stripe-slide 12s infinite linear forwards;
      }
    }
  }
}

//////////////////////
// SWORD ANIMATIONS //
//////////////////////

#left-sword {
  animation: 5s left-attack cubic-bezier(0,1.38,.83,.67) infinite;
}

#right-sword {
  animation: 5s right-attack cubic-bezier(0,1.38,.83,.67) infinite;
}

.swords {
  position: relative;
  text-align: center;
}

.sword {
  display: inline-block;
  margin: 5rem;
  transform-origin: 50% 77%;
}

.blade {
  background-color: hsl(0, 0%, 81%);
}

.knob {
  border-radius: 50%;
}

.blade, .grip, .knob {
  margin: auto;
}

.guard, .grip {
  background-color: hsl(53, 19%, 22%);
}

.knight {
  width: 5rem;
  transform: rotateY(180deg);
}

.knight .blade {
  height: 20rem;
  width: 1rem;
  border-top-right-radius: 50%;
  border-top-left-radius: 50%;
  box-shadow: -.5rem 0 0 0 hsla(0, 0%, 43%, .5) inset;
}

.knight .guard, .knight  .grip {
  background-color: hsl(53, 7%, 41%);
}

.knight .guard {
  height: 0.45rem;
  width: 100%;
  border-radius: 33%;
}

.knight .grip {
  height: 4rem;
  width: 0.7rem;
  border-radius: 150%;
  border-top-right-radius: 0;
  border-top-left-radius: 0;
}

.knight .knob {
  position: relative; top: -.5rem;
  height: 1rem; width: 1rem;
  background-color: hsl(0, 0%, 80%);
}

@keyframes right-attack {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

@keyframes left-attack {
  from { transform: rotate(360deg); }
  to { transform: rotate(0deg); }
}

